--- a/portfolio-main/templates/hero.html
+++ b/portfolio-main/templates/hero.html
@@ -3,7 +3,7 @@
         <div class="space-y-4 fade-up">
             <div>
                 <span class="text-base sm:text-lg md:text-xl font-mono text-gray-400">{{hero.greeting|safe}}</span>
-                <h1 class="text-4xl sm:text-5xl md:text-7xl font-bold font-mono leading-tight mt-2">{{hero.full_name|safe}}</h1>
+                <h1 class="text-4xl sm:text-5xl md:text-7xl font-bold font-mono leading-tight mt-2">Jahongir Abdurahimov</h1>
                 <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold font-mono leading-tight text-gray-400 mt-2">{{hero.title|safe}}</h2>
             </div>
             <p class="text-base sm:text-lg md:text-xl text-gray-400 max-w-xl">
